# helper-duck

./: .gitignore  .pre-commit-config.yaml  .tmux-sessionizer.yaml  Dockerfile  README.md  calculate_num.py  database.db  db_init.sql  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
src/helper_duck/: __init__.py
