[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name = "helper_duck"
dynamic = ["version"]
authors = [
  { name="alexacallmebaka", email="50460460+alexacallmebaka@users.noreply.github.com" },
]
description = "HackKU's Mentorship Ticketing System Discord Bot"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "hackku", "discord", "bot", "ticketing"
]
dependencies = [
    "nextcord>=3.0.1",
]

[tool.setuptools.dynamic]
version = {attr = "helper_duck.__version__"}

[project.urls]
"Source" = "https://github.com/the-hackku/helper-duck"
"Bug Tracker" = "https://github.com/the-hackku/helper-duck/issues"

[project.gui-scripts]
run_helper_duck = "helper_duck:run"

[project.optional-dependencies]
tools = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.setuptools.package-data]
azul = ["py.typed", "data/*", "lang/*", "fonts/*"]

[tool.uv]
package = true

[tool.mypy]
files = ["src/helper_duck/",]
show_column_numbers = true
show_error_codes = true
show_traceback = true
disallow_any_decorated = true
# nextcord does not have type annotations and there are errors
# left and right from nextcord types resolving to Any
disallow_any_unimported = false
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict = true
warn_unreachable = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "R",     # Refactor
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
    "D203",   # one-blank-line-before-class
    "D204",   # one-blank-line-after-class
    "D211",   # no-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D417",   # undocumented-param "Missing argument descriptions"
    "E501",   # line-too-long
    "PYI041", # redundant-numeric-union
    "S101",   # assert (use of assert for tests and type narrowing)
    "SIM117", # multiple-with-statements
]
